# prefect-pipeline

./: .env.example  .gitignore  README.md  main.py  monitoring.py  orchestration.py  pyproject.toml
src/prefect_pipeline/: my_favorite_function.py
